--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,8 @@
 body {
     padding: 2rem;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #fafafa;
+    user-select: none;
 }
 
 .grid-container {
